Update templates according to new definition

--- a/parts/contact.twig
+++ b/parts/contact.twig
@@ -19,6 +19,19 @@
       <span class="val">{{ meta.contact.opening.val2 }}</span>
     </div>
   </div>
+  <div class="phones">
+    <div class="phone1">
+      <span class="label">{{ meta.contact.phone1.label }}</span>
+      <span class="number">{{ meta.contact.phone1.number }}</span>
+    </div>
+    <div class="phone2">
+      <span class="label">{{ meta.contact.phone2.label }}</span>
+      <span class="number">{{ meta.contact.phone2.number }}</span>
+    </div>
+    <div class="fax">
+      <span class="label">{{ meta.contact.fax.label }}</span>
+      <span class="number">{{ meta.contact.fax.number }}</span>
+    </div>
   <div class="email">
     <a href="mailto:{{ meta.contact.email }}">{{ meta.contact.email }}</a>
   </div>
