--- a/parts/header.twig
+++ b/parts/header.twig
@@ -1,6 +1,6 @@
 <header itemscope itemtype="http://schema.org/WPHeader">
 
-  <a href="#top"><img src="{{ pages.index.meta.logo }}" class="logo" alt="{{ site_title }}"></a>
+  <a href="#top"><img src="{{ meta.header.logo }}" class="logo" alt="{{ site_title }}"></a>
 
   <nav id="mainNav" itemscope itemtype="http://schema.org/SiteNavigationElement">
     
