--- a/parts/start.twig
+++ b/parts/start.twig
@@ -3,7 +3,7 @@
   <img class="img-full" src="{{ meta.start.img }}" alt="{{ site_title }}" itemprop="primaryImageOfPage">
   <h1 itemprop="headline">{{ meta.start.title }}</h1>
   <h2 itemprop="alternativeHeadline">{{ meta.start.subtitle }}</h2>
-  <a class="emergency-number" href="tel:{{ meta.contact.emergency_number }}">{{ meta.start.emergency_label }}}: {{ meta.emergency_number }}</a>
+  <a class="emergency-number" href="tel:{{ meta.contact.phone1.val }}">{{ meta.contact.phone1.label }}}: {{ meta.contact.phone1.number }}</a>
 
   <a class="next-arrow" href="
     {% if meta.about is defined %}#about{% endif %}
