--- a/parts/about.twig
+++ b/parts/about.twig
@@ -1,6 +1,6 @@
 <section id="about" itemscope itemtype="http://schema.org/AboutPage">
 
-  <h1 itemprop="headline">{{ meta.about.title }}}</h1>
+  <h1 itemprop="headline">{{ meta.about.title }}</h1>
 
   <div class="image-gallery" itemscope itemtype="http://schema.org/ImageGallery">
     <img class="big" href="{{ meta.about.big_img }}" itemscope itemtype="http://schema.org/ImageObject">
