--- a/parts/services.twig
+++ b/parts/services.twig
@@ -1,6 +1,6 @@
 <section id="services" itemscope itemtype="http://scheme.org/WebPage">
 
-  <h1 itemprop="headline">{{ meta.services.title }}}</h1>
+  <h1 itemprop="headline">{{ meta.services.title }}</h1>
 
   <div class="categories">
 
