--- a/parts/start.twig
+++ b/parts/start.twig
@@ -3,14 +3,15 @@
   <img class="img-full" src="{{ meta.start.img }}" alt="{{ site_title }}" itemprop="primaryImageOfPage">
   <h1 itemprop="headline">{{ meta.start.title }}</h1>
   <h2 itemprop="alternativeHeadline">{{ meta.start.subtitle }}</h2>
-  <a class="emergency-number" href="tel:{{ meta.contact.phone1.val }}">{{ meta.contact.phone1.label }}}: {{ meta.contact.phone1.number }}</a>
+  <a class="emergency-number" href="tel:{{ meta.contact.phone1.val }}">{{ meta.contact.phone1.label }}: {{ meta.contact.phone1.number }}</a>
 
   <a class="next-arrow" href="
-    {% if meta.about is defined %}#about{% endif %}
-    {% elseif meta.deals is defined %}#deals{% endif %}
-    {% elseif meta.services is defined %}#services{% endif %}
-    {% elseif meta.contact is defined %}#contact{% endif %}
-    {% elseif meta.custom is defined %}#custom{% endif %}
+    {% if meta.about is defined %}#about
+    {% elseif meta.deals is defined %}#deals
+    {% elseif meta.services is defined %}#services
+    {% elseif meta.contact is defined %}#contact
+    {% elseif meta.custom is defined %}#custom
+    {% endif %}
   "></a>
 
 </section>
