--- a/parts/head.twig
+++ b/parts/head.twig
@@ -1,6 +1,6 @@
 {# General Meta Tags #}
 <meta charset="utf-8">
-<meta name="robots" content="{{ meta.robots }}}">
+<meta name="robots" content="{{ meta.robots }}">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <title>{{ meta.title }} - {{ site_title }}</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
