--- a/index.twig
+++ b/index.twig
@@ -24,6 +24,7 @@
 
     {% if 'footer' in meta.uses %}{% include "parts/footer.twig" %}{% endif %}
     
+    {% include "parts/scripts.twig" %}
   </body>
 
 </html>
