--- a/parts/contact.twig
+++ b/parts/contact.twig
@@ -1,12 +1,10 @@
-{# TODO: schema.org labels #}
-
-<section id="contact" itemscope itemtype="http://schema.org/WebPage">
+<section id="contact" itemscope itemtype="http://schema.org/ContactPage">
 
   <h1 itemprop="headline">{{ meta.contact.title }}</h1>
 
   <div class="location">
     <span class="street">{{ meta.contact.street }}</span>
-    <span class="city">{{ meta.contact.city}}</span>
+    <span class="city">{{ meta.contact.postal }} {{ meta.contact.city}}</span>
   </div>
   <div class="opening-hours">
     <span class="label">{{ meta.contact.opening_label }}</span>
@@ -22,15 +20,15 @@
   <div class="phones">
     <div class="phone1">
       <span class="label">{{ meta.contact.phone1.label }}</span>
-      <span class="number">{{ meta.contact.phone1.number }}</span>
+      <a href="tel:{{ meta.contact.phone1.number_real }}" class="number">{{ meta.contact.phone1.number_show }}</a>
     </div>
     <div class="phone2">
       <span class="label">{{ meta.contact.phone2.label }}</span>
-      <span class="number">{{ meta.contact.phone2.number }}</span>
+      <a href="tel:{{ meta.contact.phone2.number_real }}" class="number">{{ meta.contact.phone2.number_show }}</a>
     </div>
     <div class="fax">
       <span class="label">{{ meta.contact.fax.label }}</span>
-      <span class="number">{{ meta.contact.fax.number }}</span>
+      <a href="tel:{{ meta.contact.fax.number_real }}" class="number">{{ meta.contact.fax.number_show }}</a>
     </div>
   <div class="email">
     <a href="mailto:{{ meta.contact.email }}">{{ meta.contact.email }}</a>
