Add footer and go_back template

--- a/index.twig
+++ b/index.twig
@@ -12,19 +12,22 @@
     
     <main>
 
-      {% if 'go_back' in meta.uses %}{% include "parts/go_back.twig" %}{% endif %}
+      {% if meta.go_back is defined %}{% include "parts/go_back.twig" %}{% endif %}
+      {% if meta.header is defined %}{% include "parts/header.twig" %}{% endif %}
       {% if meta.start is defined %}{% include "parts/start.twig" %}{% endif %}
       {% if meta.about is defined %}{% include "parts/about.twig" %}{% endif %}
       {% if meta.deals is defined %}{% include "parts/deals.twig" %}{% endif %}
       {% if meta.services is defined %}{% include "parts/services.twig" %}{% endif %}
       {% if meta.contact is defined %}{% include "parts/contact.twig" %}{% endif %}
-      {% if 'custom' in meta.uses %}{% include "parts/custom.twig" %}{% endif %}
+      {% if meta.footer is defined %}{% include "parts/footer.twig" %}{% endif %}
+      {% if meta.custom %}{% include "parts/custom.twig" %}{% endif %}
 
     </main>
 
     {% if 'footer' in meta.uses %}{% include "parts/footer.twig" %}{% endif %}
     
     {% include "parts/scripts.twig" %}
+
   </body>
 
 </html>
