--- a/parts/about.twig
+++ b/parts/about.twig
@@ -3,9 +3,9 @@
   <h1 itemprop="headline">{{ meta.about.title }}</h1>
 
   <div class="image-gallery" itemscope itemtype="http://schema.org/ImageGallery">
-    <img class="big" href="{{ meta.about.big_img }}" itemscope itemtype="http://schema.org/ImageObject">
+    <img class="big" src="{{ meta.about.big_img }}" itemscope itemtype="http://schema.org/ImageObject">
     {% for image in meta.about.more_img %}
-      <img class="small" href="{{ image }}" itemscope itemtype="http://schema.org/ImageObject">
+      <img class="small" src="{{ image }}" itemscope itemtype="http://schema.org/ImageObject">
     {% endfor %}
   </div>
 
