Add header style and js for nav scrolling

--- a/parts/scripts.twig
+++ b/parts/scripts.twig
@@ -29,3 +29,5 @@
         "logo": "{{ base_url }}/{{ meta.header.logo }}",
     }
 </script>
+<script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+<script src="{{ theme_url }}/js/animations.js"></script>
