--- a/parts/services.twig
+++ b/parts/services.twig
@@ -4,9 +4,10 @@
 
   <div class="categories">
 
-    {% for category in meta.services.categories %}
+    {% for key,category in meta.services.categories %}
 
-      <div class="category {{ category.icon }}">
+      <div class="category {{ key }}">
+        <img src="{{ category.icon }}" width="50px">
         <span class="headline">{{ category.title }}</span>
         <ul itemscope itemtype="http://schema.org/ItemList">
         {% for el in category.items %}
