--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,7 @@ header{
     top:0;
     box-shadow: 0 1px 9px 0 rgba(0,0,0,0.4);
     transition: height 0.4s;
+    z-index:1;
 }
 header img {
     height:90px;
@@ -26,7 +27,6 @@ header nav {
     position:absolute;
     transition: line-height 0.4s;
 }
-
 /* Header small*/
 header.small {
     height:80px;
@@ -44,9 +44,69 @@ header nav a, header nav span {
     color:#272727;
     margin-left:25px;
 }
-
 section {
     /* To fix navigation overlapping problem*/
     padding-top:80px;
     margin-top:-80px;
+}
+#main {
+    height:100vh;
+    width:100%;
+    position:relative;
+}
+
+/* --- Start section --- */
+
+#start {
+    background: 
+        linear-gradient(rgba(255,255,255,.4), rgba(255,255,255,.4)), 
+        url('/assets/background.jpg') center center;
+    background-size:cover;
+    height:100vh;
+    width:100%;
+}
+#start .content {
+    position:relative;
+    text-align:center;
+    height:calc(100vh - 110px);
+    margin-top:110px;
+}
+#start .headline-container {
+    position:absolute;
+    top: 50%;
+    left:50%;
+    margin-right:-50%;
+    transform: translate(-50%,-50%);
+}
+#start h1 {
+    font-family: 'Merriweather', 'Times New Roman', serif;
+    font-size: 25pt;
+    background:#fff;
+    color:#313131;
+    padding:15px 30px;
+    margin:0;
+    width:initial;
+}
+#start h2 {
+    font-size: 20pt;
+    background: #666;
+    color:#fff;
+    margin:0;
+    padding: 12px 30px;
+    font-weight:normal;
+}
+#start .emergency-number {
+    position:relative;
+    display:inline-block;
+    margin-top:4vh;
+    padding:10px 30px;
+    padding-left:60px;
+    text-decoration:none;
+    font-size:20pt;
+    color:#fff;
+    background: url('../assets/phone.png') #c1322c 12px center/32px no-repeat;
+    transition: background-color 0.2s;
+}
+#start .emergency-number:hover{
+    background-color:#962520;
 }
