--- a/parts/head.twig
+++ b/parts/head.twig
@@ -22,7 +22,7 @@
 <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
 
 {# External Includes #}
-<link href="https://fonts.googleapis.com/css?family=Lato|Merriweather" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Lato:300,400|Merriweather" rel="stylesheet">
 <link href="{{ theme_url }}/css/style.css" rel="stylesheet">
 <link href="{{ theme_url }}/css/normalize.css" rel="stylesheet">
 <script src="{{ theme_url }}/js/modernizr.js"></script>
