--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 body {
-    font-family: Lato, Arial, sans-serif;
+    font-family: 'Lato', Arial, sans-serif;
 }
 /* Header general*/
 header{
@@ -46,13 +46,17 @@ header nav a{
     transition: color 0.4s;
 }
 header nav a.active {
-    color: #c1322c;
+    color: #c9352c;
 }
 section {
     /* To fix navigation overlapping problem*/
     padding-top:80px;
     margin-top:-80px;
     outline:none;
+}
+section .inside {
+    padding:40px 30px;
+    text-align:center;
 }
 #main {
     height:100vh;
@@ -109,20 +113,15 @@ section {
     text-decoration:none;
     font-size:20pt;
     color:#fff;
-    background: url('../assets/phone.png') #c1322c 12px center/32px no-repeat;
+    background: url('../assets/phone.png') #c9352c 12px center/32px no-repeat;
     transition: background-color 0.2s;
 }
 #start .emergency-number:hover{
-    background-color:#962520;
+    background-color:#c9352c;
 }
 
 /* --- About section --- */
 
-#about {
-    padding:130px 30px;
-    padding-bottom:30px;
-    text-align:center;
-}
 #about .main-text {
     display:inline-block;
     width: 65%;
@@ -152,4 +151,96 @@ section {
     width:25%;
     max-width:112px;
     margin-top:7%;
+}
+
+/* --- Deals section --- */
+
+#deals .inside {
+    background: #c9352c;
+    color: #fff;
+}
+
+/* --- Services section --- */
+
+#services .inside{
+    border-top: 5px solid #c9352c;
+}
+#services .category {
+    width:30%;
+    display:inline-block;
+    vertical-align: top;
+    margin-bottom:20px;
+    text-align:left;
+}
+#services .category span {
+    font-family: 'Merriweather', 'Times New Roman', serif;
+    font-size:15pt;
+    margin-left: 10px;
+    display:inline-block;
+    max-width:85%;
+    vertical-align: bottom;
+}
+#services .category img {
+    display:inline-block;
+    width:7%;
+    vertical-align:top;
+}
+#services .category li {
+    font-size:13pt;
+}
+#services .external-logos a {
+    text-decoration:none;
+    color:#000;
+}
+#services .logo {
+    display: inline-block;
+    width: 9%;
+    max-width: 115px;
+    margin-right: 5%;
+    vertical-align: middle;
+    line-height:100%;
+    margin-top:15px;
+}
+#services .logo img {
+    width: 100%;
+    vertical-align:middle;
+}
+#services .logo img.cl {
+    display: none;
+}
+#services .logo:hover img.sw, #services .logo:active img.sw {
+    display:none;
+}
+#services .logo:hover img.cl, #services .logo:active img.cl {
+    display: block;
+}
+
+/* --- Contact section --- */
+
+#contact .inside {
+    background: #c9352c;
+    color:#fff;
+}
+#contact .inside a {
+    color:#fff;
+    text-decoration:none;
+}
+
+/* --- Footer --- */
+footer {
+    background: #313131;
+    color: #fff;
+    text-align: center;
+    padding: 20px;
+}
+footer .footer-text {
+    display:inline-block;
+    margin-right:15px;
+}
+footer nav {
+    display:inline-block;
+}
+footer nav a{
+    color: #c9352c;
+    text-decoration:none;
 }
