--- a/parts/about.twig
+++ b/parts/about.twig
@@ -1,17 +1,19 @@
 <section id="about" itemscope itemtype="http://schema.org/AboutPage">
 
-  <div class="image-gallery" itemscope itemtype="http://schema.org/ImageGallery">
-    <img class="big" src="{{ meta.about.big_img }}" itemscope itemtype="http://schema.org/ImageObject"><br />
-    {% for image in meta.about.more_img %}
-      <img class="small" src="{{ image }}" itemscope itemtype="http://schema.org/ImageObject">
-    {% endfor %}
-  </div>
+  <div class="inside">
+    <div class="image-gallery" itemscope itemtype="http://schema.org/ImageGallery">
+      <img class="big" src="{{ meta.about.big_img }}" itemscope itemtype="http://schema.org/ImageObject"><br />
+      {% for image in meta.about.more_img %}
+        <img class="small" src="{{ image }}" itemscope itemtype="http://schema.org/ImageObject">
+      {% endfor %}
+    </div>
 
-  <div class="main-text">
-    <h1 itemprop="headline">{{ meta.about.title }}</h1>
-    {% for paragraph in meta.about.text %}
-      <p>{{ paragraph }}</p>
-    {% endfor %}
+    <div class="main-text">
+      <h1 itemprop="headline">{{ meta.about.title }}</h1>
+      {% for paragraph in meta.about.text %}
+        <p>{{ paragraph }}</p>
+      {% endfor %}
+    </div>
   </div>
 
 </section>
