--- a/parts/contact.twig
+++ b/parts/contact.twig
@@ -1,37 +1,38 @@
 <section id="contact" itemscope itemtype="http://schema.org/ContactPage">
+  <div class="inside">
+    <h1 itemprop="headline">{{ meta.contact.title }}</h1>
 
-  <h1 itemprop="headline">{{ meta.contact.title }}</h1>
-
-  <div class="location">
-    <span class="street">{{ meta.contact.street }}</span>
-    <span class="city">{{ meta.contact.postal }} {{ meta.contact.city}}</span>
-  </div>
-  <div class="opening-hours">
-    <span class="label">{{ meta.contact.opening_label }}</span>
-    <div class="hours1">
-      <span class="sel">{{ meta.contact.opening.sel1 }}</span>
-      <span class="val">{{ meta.contact.opening.val1 }}</span>
+    <div class="location">
+      <span class="street">{{ meta.contact.street }}</span>
+      <span class="city">{{ meta.contact.postal }} {{ meta.contact.city}}</span>
     </div>
-    <div class="hours2">
-      <span class="sel">{{ meta.contact.opening.sel2 }}</span>
-      <span class="val">{{ meta.contact.opening.val2 }}</span>
+    <div class="opening-hours">
+      <span class="label">{{ meta.contact.opening_label }}</span>
+      <div class="hours1">
+        <span class="sel">{{ meta.contact.opening.sel1 }}</span>
+        <span class="val">{{ meta.contact.opening.val1 }}</span>
+      </div>
+      <div class="hours2">
+        <span class="sel">{{ meta.contact.opening.sel2 }}</span>
+        <span class="val">{{ meta.contact.opening.val2 }}</span>
+      </div>
     </div>
-  </div>
-  <div class="phones">
-    <div class="phone1">
-      <span class="label">{{ meta.contact.phone1.label }}</span>
-      <a href="tel:{{ meta.contact.phone1.number_real }}" class="number">{{ meta.contact.phone1.number_show }}</a>
+    <div class="phones">
+      <div class="phone1">
+        <span class="label">{{ meta.contact.phone1.label }}</span>
+        <a href="tel:{{ meta.contact.phone1.number_real }}" class="number">{{ meta.contact.phone1.number_show }}</a>
+      </div>
+      <div class="phone2">
+        <span class="label">{{ meta.contact.phone2.label }}</span>
+        <a href="tel:{{ meta.contact.phone2.number_real }}" class="number">{{ meta.contact.phone2.number_show }}</a>
+      </div>
+      <div class="fax">
+        <span class="label">{{ meta.contact.fax.label }}</span>
+        <a href="tel:{{ meta.contact.fax.number_real }}" class="number">{{ meta.contact.fax.number_show }}</a>
+      </div>
+    <div class="email">
+      <a href="mailto:{{ meta.contact.email }}">{{ meta.contact.email }}</a>
     </div>
-    <div class="phone2">
-      <span class="label">{{ meta.contact.phone2.label }}</span>
-      <a href="tel:{{ meta.contact.phone2.number_real }}" class="number">{{ meta.contact.phone2.number_show }}</a>
-    </div>
-    <div class="fax">
-      <span class="label">{{ meta.contact.fax.label }}</span>
-      <a href="tel:{{ meta.contact.fax.number_real }}" class="number">{{ meta.contact.fax.number_show }}</a>
-    </div>
-  <div class="email">
-    <a href="mailto:{{ meta.contact.email }}">{{ meta.contact.email }}</a>
   </div>
 
 </section>
