--- a/parts/contact.twig
+++ b/parts/contact.twig
@@ -35,9 +35,9 @@
     </div>
   </div>
 
-</section>
-<section id="map">
+  <div class="map">
 
-  {# TODO: GMaps Integration #}
+    {# TODO: GMaps Integration #}
 
+  </div>
 </section>
