Middle align images in lightbox

--- a/css/style.css
+++ b/css/style.css
@@ -162,16 +162,18 @@ section .inside {
 	position: fixed;
 	z-index: 999;
 	width: 100%;
-	height: 100%;
+    height: 100%;
+    line-height:100vh;
 	text-align: center;
 	top: 0;
 	left: 0;
-	background: rgba(0,0,0,0.8);
+    background: #000000cc;
 }
 .lightbox img {
 	max-width: 90%;
 	max-height: 80%;
-	margin-top: 2%;
+    margin-top: 2%;
+    vertical-align: middle;
 }
 .lightbox:target {
 	outline: none;
