New start section

--- a/parts/header.twig
+++ b/parts/header.twig
@@ -2,13 +2,20 @@
 
   <a href="#top"><img src="{{ meta.header.logo }}" class="logo" alt="{{ site_title }}"></a>
 
-  <nav id="mainNav" itemscope itemtype="http://schema.org/SiteNavigationElement">
-    
-    {% if meta.about is defined %}<a href="#about">{{ meta.about.title }}</a>{% endif %}
-    {% if meta.deals is defined %}<a href="#deals">{{ meta.deals.title }}</a>{% endif %}
-    {% if meta.services is defined %}<a href="#services">{{ meta.services.title }}</a>{% endif %}
-    {% if meta.contact is defined %}<a href="#contact">{{ meta.contact.title }}</a>{% endif %}
+  <div class="headline">
+    <h1>{{ meta.start.title }}</h1>
+    <h2>{{ meta.start.subtitle }}</h2>
+  </div>
 
-  </nav>
+  <div class="nav-container">
+    <nav id="mainNav" itemscope itemtype="http://schema.org/SiteNavigationElement">
+      
+      {% if meta.about is defined %}<a href="#about">{{ meta.about.title }}</a>{% endif %}
+      {% if meta.deals is defined %}<a href="#deals">{{ meta.deals.title }}</a>{% endif %}
+      {% if meta.services is defined %}<a href="#services">{{ meta.services.title }}</a>{% endif %}
+      {% if meta.contact is defined %}<a href="#contact">{{ meta.contact.title }}</a>{% endif %}
+
+    </nav>
+  </div>
 
 </header>
