--- a/css/style.css
+++ b/css/style.css
@@ -6,47 +6,83 @@ header{
     background: #ffffff;
     position:fixed;
     width:100%;
-    height:110px;
+    height:235px;
     top:0;
     box-shadow: 0 1px 9px 0 rgba(0,0,0,0.4);
     transition: height 0.4s;
     z-index:1;
 }
 header img {
+    display:none;
     height:90px;
     margin-left:5%;
     margin-top:7px;
     transition: height 0.4s;
 }
+header .nav-container {
+    text-align:center;
+}
 header nav {
+    font-size: 21pt;
     display:inline-block;
-    line-height: 110px;
-    vertical-align: middle;
-    right:0;
-    margin-right: 5%;
-    position:absolute;
-    transition: line-height 0.4s;
+    position:relative;
+    padding-top:25px;
+    margin-top: 25px;
+    border-top: 3px solid #e0e0e0;
+    transition: all 0.4s;
+}
+header nav a{
+    font-variant:small-caps;
+    text-decoration:none;
+    color:#272727;
+    margin-left:25px;
+    transition: color 0.4s;
+}
+header nav a:first-child {
+    margin-left:0;
+}
+header nav a.active {
+    color: #c9352c;
+}
+header .headline {
+    margin-top: 30px;
+}
+header h1 {
+    font-family: 'Merriweather', 'Times New Roman', serif;
+    font-size: 27pt;
+    color:#313131;
+    margin-bottom:10px;
+    text-align:center;
+}
+header h2 {
+    font-size: 24pt;
+    color:#737373;
+    margin:0;
+    font-weight:normal;
+    text-align:center;
 }
 /* Header small*/
 header.small {
     height:80px;
+}
+header.small .headline{
+    display:none;
+}
+header.small img.logo{
+    display:inline-block;
 }
 header.small img {
     height:60px;
 }
 header.small nav {
     line-height:80px;
-}
-header nav a{
-    font-variant:small-caps;
-    font-size:21pt;
-    text-decoration:none;
-    color:#272727;
-    margin-left:25px;
-    transition: color 0.4s;
-}
-header nav a.active {
-    color: #c9352c;
+    vertical-align: middle;
+    position:absolute;
+    right: 5%;
+    top:0;
+    margin: 0;
+    padding: 0;
+    border: none;
 }
 section {
     /* To fix navigation overlapping problem*/
@@ -68,42 +104,41 @@ section .inside {
 /* --- Start section --- */
 
 #start {
-    background: 
-        linear-gradient(rgba(255,255,255,.4), rgba(255,255,255,.4)), 
-        url('/assets/background.jpg') center center;
-    background-size:cover;
     height:100vh;
     width:100%;
 }
 #start .content {
+    background: linear-gradient(#efefef 20%, #fff);
     position:relative;
     text-align:center;
-    height:calc(100vh - 110px);
-    margin-top:110px;
+    height:calc(100vh - 235px);
+    margin-top:235px;
 }
-#start .headline-container {
+#start .image-container {
     position:absolute;
-    top: 50%;
+    top: 25%;
     left:50%;
     margin-right:-50%;
-    transform: translate(-50%,-50%);
+    transform: translate(-50%,-25%);
+    width: 50%;
+    animation-name: flying-airplane;
+    animation-duration: 4s;
 }
-#start h1 {
-    font-family: 'Merriweather', 'Times New Roman', serif;
-    font-size: 25pt;
-    background:#fff;
-    color:#313131;
-    padding:15px 30px;
-    margin:0;
-    width:initial;
+@keyframes flying-airplane {
+    from { left: -25% }
+    to { left: 50% }
 }
-#start h2 {
-    font-size: 20pt;
-    background: #666;
-    color:#fff;
-    margin:0;
-    padding: 12px 30px;
-    font-weight:normal;
+#start img.logo {
+    margin: 10vh 0;
+    width:100%;
+    max-width: 950px;
+}
+#start .number-container {
+    position:absolute;
+    top: 80%;
+    left:50%;
+    margin-right:-50%;
+    transform: translate(-50%,-80%);
 }
 #start .emergency-number {
     position:relative;
