--- a/parts/start.twig
+++ b/parts/start.twig
@@ -1,10 +1,15 @@
 <section id="start" itemscope itemtype="http://schema.org/WebPage">
+  
   <div class="content">
-    <div class="headline-container">
-      <h1 itemprop="headline">{{ meta.start.title }}</h1>
-      <h2 itemprop="alternativeHeadline">{{ meta.start.subtitle }}</h2>
+    
+    <div class="image-container">
+      <img src="{{ meta.header.logo }}" class="logo" alt="{{ meta.site_title }}">
+    </div>
+
+    <div class="number-container">
       <a class="emergency-number" href="tel:{{ meta.contact.phone1.number_real }}">{{ meta.contact.phone1.label }}: {{ meta.contact.phone1.number_show }}</a>
     </div>
-      <a class="next-arrow" href="{% if meta.about is defined %}#about{% elseif meta.deals is defined %}#deals{% elseif meta.services is defined %}#services{% elseif meta.contact is defined %}#contact{% elseif meta.custom is defined %}#custom{% endif %}"></a>
+
   </div>
+
 </section>
