--- a/parts/footer.twig
+++ b/parts/footer.twig
@@ -5,7 +5,9 @@
     </div>
     <nav class="footer" itemscope itemtype="http://schema.org/SiteNavigationElement">
         {% for elem in meta.footer.links %}
-            <a href="{{ elem.link }}">{{ elem.label }}</a>
+            {% for page in pages %}
+                {% if page.id == elem.link %}<a href="{{ page.url }}">{{ elem.label }}</a>{% endif %}
+            {% endfor %}
         {% endfor %}
     </nav>
 
