--- a/parts/deals.twig
+++ b/parts/deals.twig
@@ -2,14 +2,19 @@
   <div class="inside">
     <h1 itemprop="headline">{{ meta.deals.title }}</h1>
 
-    {% for deal in meta.deals.items %}
+    <div class="deals-wrapper">
+      {% for deal in meta.deals.items %}
 
-      <div class="deal {{ deal.icon }}" itemscope itemtype="http://schema.org/Offer">
-        <div class="reduced-by">{{ deal.reduced }}</div>
-        <div class="description" itemprop="description">{{ deal.description }}</div>
-      </div>
+        <div class="deal" itemscope itemtype="http://schema.org/Offer">
+          <div class="icon-wrapper">
+            <img class="icon" alt="Offer Icon" src="{{ deal.icon }}">
+          </div>
+          <div class="reduced-by">{{ deal.reduced }}</div>
+          <div class="description" itemprop="description">{{ deal.description }}</div>
+        </div>
 
-    {% endfor %}
+      {% endfor %}
+    </div>
+
   </div>
-
 </section>
