--- a/parts/about.twig
+++ b/parts/about.twig
@@ -3,19 +3,19 @@
   <div class="inside">
     <div class="image-gallery" itemscope itemtype="http://schema.org/ImageGallery">
       
-      <a href="#img-big">
+      <a href="#lb-imgbig">
         <img class="big" src="{{ meta.about.big_img }}" itemscope itemtype="http://schema.org/ImageObject"><br />
       </a>
-      <a href="#_" class="lightbox" id="img-big">
+      <a href="#_" class="lightbox" id="lb-imgbig">
         <img src="{{ meta.about.big_img }}" itemscope itemtype="http://schema.org/ImageObject">
       </a>
 
       {% for id, image in meta.about.more_img %}
         
-        <a href="#img-s{{ id }}">
+        <a href="#lb-imgs{{ id }}">
           <img class="small" src="{{ image }}" itemscope itemtype="http://schema.org/ImageObject">
         </a>
-        <a href="#_" class="lightbox" id="img-s{{ id }}">
+        <a href="#_" class="lightbox" id="lb-imgs{{ id }}">
           <img src="{{ image }}" itemscope itemtype="http://schema.org/ImageObject">
         </a>
       {% endfor %}
