--- a/css/style.css
+++ b/css/style.css
@@ -93,11 +93,11 @@ section {
     padding-top:80px;
     margin-top:-80px;
     outline:none;
+    min-height: calc(50vh - 80px);
 }
 section .inside {
     padding:40px 30px;
     text-align:center;
-    min-height: calc(50vh - 80px);
 }
 #main {
     height:100vh;
@@ -152,7 +152,7 @@ section .inside {
     text-decoration:none;
     font-size:24pt;
     color:#fff;
-    background: url('../assets/phone.png') #c9352c 12px center/32px no-repeat;
+    background: url('../assets/phone.svg') #c9352c 12px center/32px no-repeat;
     transition: background-color 0.2s;
 }
 #start .emergency-number:hover{
@@ -311,20 +311,69 @@ section .inside {
 #contact .inside {
     background: #c9352c;
     color:#fff;
+    font-size: 15pt;
 }
 #contact .inside a {
     color:#fff;
     text-decoration:none;
+    border-bottom: 1px solid transparent;
+    transition: border 0.3s;
 }
-
+#contact .inside a:hover {
+    border-color: #fff;
+}
+#contact .box {
+    display: inline-block;
+    width: calc(50% - 90px);
+    vertical-align: middle;
+    text-align: left;
+    padding: 10px 0;
+    padding-left: 90px;
+    box-sizing:border-box;
+    background-size: 50px;
+    background-position: 10px center;
+    background-repeat: no-repeat;
+}
+#contact .location {
+    background-image: url('../assets/location.svg');
+}
+#contact .location span {
+    display:block;
+}
+#contact .phones {
+    background-image: url('../assets/phone.svg');
+}
+#contact .phones span {
+    width: 185px;
+    display:inline-block;
+}
+#contact .opening-hours {
+    background-image: url('../assets/clock.svg');
+}
+#contact .opening-hours span.label {
+    font-weight:bold;
+}
+#contact .opening-hours span.sel {
+    width: 145px;
+    display:inline-block;
+}
+#contact .email {
+    background-image: url('../assets/mail.svg');
+}
+#contact .email a {
+    display:block;
+    width:fit-content;
+}
 
 /* Contact Form */
 
-#p01-contact1 {
+#lb-contact .form-inside {
     background: #f9f9f9;
     color:#000;
     padding: 20px;
+    margin: 50px;
     text-align: left;
+    display:inline-block;
 }
 #lb-contact label{
     margin-bottom: 10px;
@@ -356,10 +405,20 @@ section .inside {
     border-radius: 17px;
     position: relative;
     display: inline-block;
-    top: 36px;
-    right: -260px;
+    text-align: center;
+    bottom: 36px;
+    left: 520px;
+    text-decoration: none;
 }
+
+/* Map */
+
+#contact iframe {
+    width: 100%;
+}
+
 /* --- Footer --- */
+
 footer {
     background: #313131;
     color: #fff;
