--- a/parts/contact.twig
+++ b/parts/contact.twig
@@ -2,50 +2,63 @@
   <div class="inside">
     <h1 itemprop="headline">{{ meta.contact.title }}</h1>
 
-    <div class="location">
-      <span class="street">{{ meta.contact.street }}</span>
-      <span class="city">{{ meta.contact.postal }} {{ meta.contact.city}}</span>
-    </div>
-    <div class="opening-hours">
-      <span class="label">{{ meta.contact.opening_label }}</span>
-      <div class="hours1">
-        <span class="sel">{{ meta.contact.opening.sel1 }}</span>
-        <span class="val">{{ meta.contact.opening.val1 }}</span>
+    <div class="boxes">
+      <div class="location box">
+        <span class="street">{{ meta.contact.street }}</span>
+        <span class="city">{{ meta.contact.postal }} {{ meta.contact.city}}</span>
       </div>
-      <div class="hours2">
-        <span class="sel">{{ meta.contact.opening.sel2 }}</span>
-        <span class="val">{{ meta.contact.opening.val2 }}</span>
+      <div class="opening-hours box">
+        <span class="label">{{ meta.contact.opening_label }}</span>
+        <div class="hours1">
+          <span class="sel">{{ meta.contact.opening.sel1 }}</span>
+          <span class="val">{{ meta.contact.opening.val1 }}</span>
+        </div>
+        <div class="hours2">
+          <span class="sel">{{ meta.contact.opening.sel2 }}</span>
+          <span class="val">{{ meta.contact.opening.val2 }}</span>
+        </div>
       </div>
-    </div>
-    <div class="phones">
-      <div class="phone1">
-        <span class="label">{{ meta.contact.phone1.label }}</span>
-        <a href="tel:{{ meta.contact.phone1.number_real }}" class="number">{{ meta.contact.phone1.number_show }}</a>
+      <div class="phones box">
+        <div class="phone1">
+          <span class="label">{{ meta.contact.phone1.label }}</span>
+          <a href="tel:{{ meta.contact.phone1.number_real }}" class="number">{{ meta.contact.phone1.number_show }}</a>
+        </div>
+        <div class="phone2">
+          <span class="label">{{ meta.contact.phone2.label }}</span>
+          <a href="tel:{{ meta.contact.phone2.number_real }}" class="number">{{ meta.contact.phone2.number_show }}</a>
+        </div>
+        <div class="fax">
+          <span class="label">{{ meta.contact.fax.label }}</span>
+          <a href="tel:{{ meta.contact.fax.number_real }}" class="number">{{ meta.contact.fax.number_show }}</a>
+        </div>
       </div>
-      <div class="phone2">
-        <span class="label">{{ meta.contact.phone2.label }}</span>
-        <a href="tel:{{ meta.contact.phone2.number_real }}" class="number">{{ meta.contact.phone2.number_show }}</a>
+      <div class="email box">
+        <a href="mailto:{{ meta.contact.email }}">{{ meta.contact.email }}</a>
+        <a href="#lb-contact">{{ meta.contact.form_title }}</a>
       </div>
-      <div class="fax">
-        <span class="label">{{ meta.contact.fax.label }}</span>
-        <a href="tel:{{ meta.contact.fax.number_real }}" class="number">{{ meta.contact.fax.number_show }}</a>
-      </div>
-    <div class="email">
-      <a href="mailto:{{ meta.contact.email }}">{{ meta.contact.email }}</a>
-      <a href="#lb-contact">Zum Kontaktformular</a>
     </div>
   </div>
-  {% if meta.contact.use_form %}
+
+  {% if meta.contact.form_title %}
     <div class="lightbox" id="lb-contact">
       <link rel="stylesheet" href="../../assets/contact.css">
-      <a href="#_" class="close">X</a>
-      {{ contact() }}
+      <div class="form-inside">
+        <a href="#_" class="close">X</a>
+        <h1>{{ meta.contact.form_title }}</h1>
+        {{ contact() }}
+      </div>
     </div>
   {% endif %}
 
   <div class="map">
 
-    {# TODO: GMaps Integration #}
+    <iframe
+      height="350"
+      frameborder="0" style="border:0"
+      allowfullscreen
+      src="https://www.google.com/maps/embed/v1/place?key=AIzaSyBgFikcpLHG9puX7Bu2pZ4yFu14geFozOo
+        &q={{ meta.title|url_encode }}+{{ meta.contact.street|url_encode }}+{{ meta.contact.city|url_encode }}" allowfullscreen>
+    </iframe>
 
   </div>
 </section>
