--- a/parts/custom.twig
+++ b/parts/custom.twig
@@ -1,5 +1,5 @@
-<section itemscope itemtype="WebPage">
-
-  {{ content }}
-
+<section id="custom" itemscope itemtype="WebPage">
+  <div class="inside">
+    {{ content }}
+  </div>
 </section>
