Add style for tablets & small style improvements

--- a/parts/contact.twig
+++ b/parts/contact.twig
@@ -19,15 +19,15 @@
         </div>
       </div>
       <div class="phones box">
-        <div class="phone1">
+        <div class="phone1 phone">
           <span class="label">{{ meta.contact.phone1.label }}</span>
           <a href="tel:{{ meta.contact.phone1.number_real }}" class="number">{{ meta.contact.phone1.number_show }}</a>
         </div>
-        <div class="phone2">
+        <div class="phone2 phone">
           <span class="label">{{ meta.contact.phone2.label }}</span>
           <a href="tel:{{ meta.contact.phone2.number_real }}" class="number">{{ meta.contact.phone2.number_show }}</a>
         </div>
-        <div class="fax">
+        <div class="fax phone">
           <span class="label">{{ meta.contact.fax.label }}</span>
           <a href="tel:{{ meta.contact.fax.number_real }}" class="number">{{ meta.contact.fax.number_show }}</a>
         </div>
