--- a/parts/head.twig
+++ b/parts/head.twig
@@ -17,12 +17,12 @@
 <meta name="twitter:card" content="summary" />
 
 {# Favicon in Website Root #}
-<link rel="icon" href="favicon.ico">
 <link rel="icon" type="image/png" sizes="32x32" href="favicon.png">
 <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
 
 {# External Includes #}
 <link href="https://fonts.googleapis.com/css?family=Lato:300,400|Merriweather" rel="stylesheet">
-<link href="{{ theme_url }}/css/style.css" rel="stylesheet">
+<link href="{{ theme_url }}/css/style-desktop.css" rel="stylesheet" media="(min-width: 800px)">
+<link href="{{ theme_url }}/css/style-mobile.css" rel="stylesheet" media="(max-width: 799px)">
 <link href="{{ theme_url }}/css/normalize.css" rel="stylesheet">
 <script src="{{ theme_url }}/js/modernizr.js"></script>
