--- a/css/style-desktop.css
+++ b/css/style-desktop.css
@@ -1,8 +1,35 @@
+@media screen and (min-width: 800px) {
+
+/* --- General style --- */
+
 body {
     font-family: 'Lato', Arial, sans-serif;
     font-size: 14pt;
 }
-/* Header general*/
+section {
+    /* To fix navigation overlapping problem*/
+    padding-top:80px;
+    margin-top:-80px;
+    outline:none;
+}
+@media screen and (max-width: 1080px) {
+    section {
+        padding-top: 160px;
+        margin-top: -160px;
+    }
+}
+section .inside {
+    padding:40px 30px;
+    text-align:center;
+}
+#main {
+    height:100vh;
+    width:100%;
+    position:relative;
+}
+
+/* --- Header and menu --- */
+
 header{
     background: #ffffff;
     position:fixed;
@@ -88,27 +115,42 @@ header.small nav {
     padding: 0;
     border: none;
 }
-section {
-    /* To fix navigation overlapping problem*/
-    padding-top:80px;
-    margin-top:-80px;
-    outline:none;
-    min-height: calc(50vh - 80px);
+/* tablet big */
+@media screen and (max-width: 1230px) {
+    header.small nav {
+        right: 3%;
+        font-size: 21pt;
+    }
+    header.small img.logo {
+        height: 52px;
+        margin-top: 14px;
+    }
 }
-section .inside {
-    padding:40px 30px;
-    text-align:center;
-}
-#main {
-    height:100vh;
-    width:100%;
-    position:relative;
+/* tablet small */
+@media screen and (max-width: 1080px) {
+    header nav{
+        font-size: 21pt;
+    }
+    header.small {
+        height: 160px;
+    }
+    header.small nav {
+        position:relative;
+        top: 0px;
+    }
+    header .logo-wrapper {
+        text-align:center;
+    }
+    header img {
+        margin:0;
+    }
 }
 
 /* --- Start section --- */
 
 #start {
     height:100vh;
+    max-height: 950px;
     width:100%;
 }
 #start .content {
@@ -116,6 +158,7 @@ section .inside {
     position:relative;
     text-align:center;
     height:calc(100vh - 235px);
+    max-height: 750px;
     margin-top:235px;
 }
 #start .image-container {
@@ -127,6 +170,11 @@ section .inside {
     width: 55%;
     animation-name: flying-airplane;
     animation-duration: 4s;
+}
+@media screen and (max-width: 1230px) {
+    #start .image-container {
+        width: 75%;
+    }
 }
 @keyframes flying-airplane {
     from { left: -40% }
@@ -190,6 +238,13 @@ section .inside {
     width:25%;
     max-width:100px;
     margin-top:7%;
+}
+/* tablet small */
+@media screen and (max-width: 1080px) {
+    #about .image-gallery {
+        width: 30%;
+        margin-top: 72px;
+    }
 }
 
 /* Lightbox (copyright by Gregory Schier, source https://codepen.io/gschier/pen/HCoqh) */
@@ -305,6 +360,12 @@ section .inside {
 #services .logo:hover img.cl, #services .logo:active img.cl {
     display: block;
 }
+/* tablet small */
+@media screen and (max-width: 1080px) {
+    #services .category {
+        width: 45%;
+    }
+}
 
 /* --- Contact section --- */
 
@@ -363,6 +424,22 @@ section .inside {
 #contact .email a {
     display:block;
     width:fit-content;
+}
+/* tablet small */
+@media screen and (max-width: 1080px) {
+    #contact .box {
+        width: 45%;
+    }
+    #contact .phones span {
+        display:block;
+        font-weight:bold;
+    }
+    #contact .phone {
+        margin-bottom: 7px;
+    }
+    #contact .email a {
+        margin-bottom: 7px;
+    }
 }
 
 /* Contact Form */
@@ -474,4 +551,6 @@ footer nav a:hover {
     border-bottom: 3px solid #194871;
     color: #194871;
     text-align:center;
+}
+
 }
