--- a/parts/header.twig
+++ b/parts/header.twig
@@ -1,6 +1,8 @@
 <header itemscope itemtype="http://schema.org/WPHeader">
 
-  <a href="#top"><img src="{{ meta.header.logo }}" class="logo" alt="{{ site_title }}"></a>
+  <div class="logo-wrapper">
+    <a href="#top"><img src="{{ meta.header.logo }}" class="logo" alt="{{ site_title }}"></a>
+  </div>
 
   <div class="headline">
     <h1>{{ meta.start.title }}</h1>
