--- a/parts/head.twig
+++ b/parts/head.twig
@@ -2,7 +2,7 @@
 <meta charset="utf-8">
 <meta name="robots" content="{{ meta.robots }}">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
-<title>{{ meta.title }} - {{ site_title }}</title>
+<title>{{ meta.title }}</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="description" content="{{ pages.index.meta.description|striptags }}" />
 
