--- a/parts/about.twig
+++ b/parts/about.twig
@@ -10,13 +10,15 @@
         <img src="{{ meta.about.big_img }}" itemscope itemtype="http://schema.org/ImageObject">
       </a>
 
-      {% for id, image in meta.about.more_img %}
-        
+      {% for id, elem in meta.about.more_img %}
+      
         <a href="#lb-imgs{{ id }}">
-          <img class="small" src="{{ image }}" itemscope itemtype="http://schema.org/ImageObject">
+          <img class="small" src="{{ elem.thumb }}" itemscope itemtype="http://schema.org/ImageObject" />
         </a>
+        
         <a href="#_" class="lightbox" id="lb-imgs{{ id }}">
-          <img src="{{ image }}" itemscope itemtype="http://schema.org/ImageObject">
+          <img class="big" src="{{ elem.image }}" itemscope itemtype="http://schema.org/ImageObject">
+          <p class="caption">{{ elem.caption }}</p>
         </a>
       {% endfor %}
     </div>
