--- a/parts/head.twig
+++ b/parts/head.twig
@@ -22,7 +22,6 @@
 
 {# External Includes #}
 <link href="https://fonts.googleapis.com/css?family=Lato:300,400|Merriweather" rel="stylesheet">
-<link href="{{ theme_url }}/css/style-desktop.css" rel="stylesheet" media="(min-width: 800px)">
-<link href="{{ theme_url }}/css/style-mobile.css" rel="stylesheet" media="(max-width: 799px)">
+<link href="{{ theme_url }}/css/style.css" rel="stylesheet">
 <link href="{{ theme_url }}/css/normalize.css" rel="stylesheet">
 <script src="{{ theme_url }}/js/modernizr.js"></script>
