--- a/parts/header.twig
+++ b/parts/header.twig
@@ -8,7 +8,7 @@
     <h1>{{ meta.start.title }}</h1>
     <h2>{{ meta.start.subtitle }}</h2>
   </div>
-
+  <div id="nav-toggle"></div>
   <div class="nav-container">
     <nav id="mainNav" itemscope itemtype="http://schema.org/SiteNavigationElement">
       
